@@ -1,7 +1,0 @@
-figdir = figures
-docname = battstat
-lang = C
-omffile = battstat-C.omf
-entities = legal.xml
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
