@@ -1,3 +1,7 @@
+2005-07-20  Danilo Šegan  <danilo@gnome.org>
+
+	* docs/C/Makefile.am: Really removed now! Honest!
+
 2005-07-19  Danilo Šegan  <danilo@gnome.org>
 
 	* battstat/docs/Makefile.am: Added.
